added exclamation point

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label><span> </span><input type="submit" value="Submit"/></label>
             </fieldset>
             </form>
-            <h3>Newly Added Data</h3>
+            <h3>Newly Added Data!</h3>
             <ul id="newPerson">
                 
             </ul>
