added a button that checks if we have enough submissions to make a crossword.

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
             </div>
       </div>
     </main>
+    <div id="generate-message">BUTTON</div>
+    <span id="buttonContainerSpan"><button id="generate">Generate Crossword</button></span>
   </body>
 </html>
