made form disappear

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form id="totalform">
             <fieldset><legend>Crossword Questions</legend>
             <label for="field1"><span>Name <span class="required">*</span></span><input type="text" class="input-field" name="QName" value="" id="namevalue"/></label>
-            <label for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="email" class="input-field" name="Q1" value="" id="q1value"/></label>
+            <label for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1value"/></label>
             <label for="Q2"><span>What is your favorite animal?<span class="required">*</span></span><input type="text" class="input-field" name="Q2" value="" id="q2value"/></label>
             <label for="Q3"><span>Who is your favorite teacher?</span><select name="Q3" class="select-field">
             <option value="Chett">Chett</option>
@@ -41,12 +41,12 @@
       </div>
     </main>
     <div id="generate-message">BUTTON</div>
-    <span id="buttonContainerSpan"><button id="generate">Generate Crossword</button></span>
-    <form>
-      <label for="Q1">Question 1:</label><br>
+    <span id="buttonContainerSpan"><button id="generate">Generate Quiz</button></span>
+    <!-- <form id="quiz">
+      <label for="Q1" id="quizQ1"></label><br>
       <input type="text" id="Q1" name="Q1"><br>
-      <label for="Q2">Question 2:</label><br>
+      <label for="Q2">What is Jake's favorite animal?</label><br>
       <input type="text" id="Q2" name="Q2">
-    </form>
+    </form> -->
   </body>
 </html>
