--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form id="totalform">
             <fieldset><legend>Crossword Questions</legend>
             <label for="field1"><span>Name <span class="required">*</span></span><input type="text" class="input-field" name="QName" value="" id="namevalue"/></label>
-            <label for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1value"/></label>
+            <label for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1value" group="no-spaces"/></label>
             <label for="Q2"><span>What is your favorite animal?<span class="required">*</span></span><input type="text" class="input-field" name="Q2" value="" id="q2value"/></label>
             <label for="Q3"><span>Who is your favorite teacher?</span><select name="Q3" class="select-field">
             <option value="Chett">Chett</option>
