--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <ul id="review-list"></ul>
         <div class="form-style-3">
             <form id="totalform">
-            <fieldset><legend>Crossword Questions</legend>
+            <fieldset><legend>Form Questions</legend>
             <label for="field1"><span>Name <span class="required">*</span></span><input type="text" class="input-field" name="QName" value="" id="namevalue"/></label>
-            <label for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1value"/></label>
-            <label for="Q2"><span>What is your favorite animal?<span class="required">*</span></span><input type="text" class="input-field" name="Q2" value="" id="q2value"/></label>
+            <label onkeypress="return RestrictSpace()" for="Q1"><span>What is your favorite color?<span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1value"/></label>
+            <label onkeypress="return RestrictSpace()" for="Q2"><span>What is your favorite animal?<span class="required">*</span></span><input type="text" class="input-field" name="Q2" value="" id="q2value"/></label>
             <label for="Q3"><span>Who is your favorite teacher?</span><select name="Q3" class="select-field">
             <option value="Chett">Chett</option>
             <option value="Chett">Chett</option>
@@ -53,34 +53,9 @@
       <form id ='quizForm'>
   
       <fieldset><legend> "GET" to know your Cohort 😺 </legend>
-      <ul id="questions-list"> 
-        <li class='quiz-questions'><label for=><span> Question1 <span class="required">*</span></span><input type="text" class="input-field" name="Q1" value="" id="q1_val"/></label></li>
-        <li class='quiz-questions'><label for=><span> Question2 <span class="required">*</span></span><input type="text" class="input-field" name="Q2" value="" id="q2_val"/></label></li>
-        <li><label for=><span> Question3 <span class="required">*</span></span><input type="text" class="input-field" name="Q3" value="" id="q3_val"/></label></li>
-        <li><label for=><span> Question4 <span class="required">*</span></span><input type="text" class="input-field" name="Q4" value="" id="q4_val"/></label></li>
-        <li><label for=><span> Question5 <span class="required">*</span></span><input type="text" class="input-field" name="Q5" value="" id="q5_val"/></label></li>
-        <li><label for=><span> Question6 <span class="required">*</span></span><input type="text" class="input-field" name="Q6" value="" id="q6_val"/></label></li>
-        <li><label for=><span> Question7 <span class="required">*</span></span><input type="text" class="input-field" name="Q7" value="" id="q7_val"/></label></li>
-        <li><label for=><span> Question8 <span class="required">*</span></span><input type="text" class="input-field" name="Q8" value="" id="q8_val"/></label></li>
-        <li><label for=><span> Question9 <span class="required">*</span></span><input type="text" class="input-field" name="Q9" value="" id="q9_val"/></label></li>
-        <li><label for=><span> Question10 <span class="required">*</span></span><input type="text" class="input-field" name="Q10" value="" id="q10_val"/></label></li>
-        <li><label for=><span> Question11 <span class="required">*</span></span><input type="text" class="input-field" name="Q11" value="" id="q11_val"/></label></li>
-        <li><label for=><span> Question12 <span class="required">*</span></span><input type="text" class="input-field" name="Q12" value="" id="q12_val"/></label></li>
-        <li><label for=><span> Question13 <span class="required">*</span></span><input type="text" class="input-field" name="Q13" value="" id="q13_val"/></label></li>
-        <li><label for=><span> Question14 <span class="required">*</span></span><input type="text" class="input-field" name="Q14" value="" id="q14_val"/></label></li>
-        <li><label for=><span> Question15 <span class="required">*</span></span><input type="text" class="input-field" name="Q15" value="" id="q15_val"/></label></li>
-        <li><label for=><span> Question16 <span class="required">*</span></span><input type="text" class="input-field" name="Q16" value="" id="q16_val"/></label></li>
-        <li><label for=><span> Question17 <span class="required">*</span></span><input type="text" class="input-field" name="Q17" value="" id="q17_val"/></label></li>
-        <li><label for=><span> Question18 <span class="required">*</span></span><input type="text" class="input-field" name="Q18" value="" id="q18_val"/></label></li>
-        <li><label for=><span> Question19 <span class="required">*</span></span><input type="text" class="input-field" name="Q19" value="" id="q19_val"/></label></li>
-        <li><label for=><span> Question20 <span class="required">*</span></span><input type="text" class="input-field" name="Q20" value="" id="q20_val"/></label></li>
-        <li><label for=><span> Question21 <span class="required">*</span></span><input type="text" class="input-field" name="Q21" value="" id="q21_val"/></label></li>
-        <li><label for=><span> Question22 <span class="required">*</span></span><input type="text" class="input-field" name="Q22" value="" id="q22_val"/></label></li>
-        <li><label for=><span> Question23 <span class="required">*</span></span><input type="text" class="input-field" name="Q23" value="" id="q23_val"/></label></li>
-        <li><label for=><span> Question24 <span class="required">*</span></span><input type="text" class="input-field" name="Q24" value="" id="q24_val"/></label></li>
-        <li><label for=><span> Question25 <span class="required">*</span></span><input type="text" class="input-field" name="Q25" value="" id="q25_val"/></label></li>
-        </ul>
-      <button id="submit"> 'POST' Results</button>
+      <ol id="questions-list"> 
+        </ol>
+      <button id="submit-answers"> 'POST' Results</button>
       
       </select></label>
       </form>
