--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <main>
       <ul id="review-list"></ul>
       <div class="form-style-3">
+        <div class="messages-container">
+          <div class="messages-box">
+            <div class="box-top">
+              <div class="message-name">Elisa</div>
+
+            </div>
+            <div class="message">"I hate Jake, but I love this project."</div>
+          </div>
+        </div>
         <form id="totalform">
           <fieldset>
             <legend>Form Questions</legend>
@@ -70,7 +79,7 @@
               </select></label
             >
           </fieldset>
-          <fieldset>
+          <fieldset id="note">
             <legend>Leave us a note!</legend>
             <label for="field6"
               ><span>Message <span class="required">*</span></span
@@ -90,11 +99,11 @@
         <fieldset>
           <legend>"GET" to know your Cohort 😺</legend>
           <ol id="questions-list">
-            
           </ol>
           <button id="submit-answers">'POST' Results</button>
         </fieldset>
       </form>
     </div>
+    
   </body>
 </html>
