--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <body>
     <header>
       <h1>Flatiron Crossword Form</h1>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     </header>
     
         <ul id="review-list"></ul>
