button features in CSS

--- a/index.html
+++ b/index.html
@@ -76,23 +76,21 @@
               ><span>Message <span class="required">*</span></span
               ><textarea name="field6" class="textarea-field"></textarea>
             </label>
-            <label><span> </span><input type="submit" value="Submit" /></label>
+            <label><span> </span><input type="submit" class="button" value="Submit" /></label>
           </fieldset>
         </form>
       </div>
     </main>
     <div id="generate-message">BUTTON</div>
     <span id="buttonContainerSpan">
-      <button id="generate">Generate Quiz</button>
+      <button class="button" id="generate">Generate Quiz</button>
     </span>
     <div id="quizDiv">
       <form id="quizForm">
         <fieldset>
           <legend>"GET" to know your Cohort 😺</legend>
-          <ol id="questions-list">
-            
-          </ol>
-          <button id="submit-answers">'POST' Results</button>
+          <ol id="questions-list"></ol>
+          <button class="button" id="submit-answers">'POST' Results</button>
         </fieldset>
       </form>
     </div>
