--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </form>
       </div>
     </main>
+    <div id="quizContainerDiv">
     <div id="generate-message">BUTTON</div>
     <span id="buttonContainerSpan">
       <button class="button" id="generate">Generate Quiz</button>
@@ -105,7 +106,9 @@
           <ol id="questions-list"></ol>
           <button class="button" id="submit-answers">'POST' Results</button>
         </fieldset>
+      
       </form>
+    </div>
     </div>
     </div>
   </body>
