adding submit to messages

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
           <div class="message-box">
             <div class="box-top">
               <div class="message-name">Elisa</div>
-              <div class="time-stamp">3:52PM on 10/27/2022</div>
+              <div class="time-stamp">Epoch Time Stamp: 1666900350</div>
             </div>
             <div class="message">"I hate Jake, but I love this project."</div>
           </div>
+          <label
+                ><span> </span
+                ><input type="submit" class="button" value="Submit"
+              /></label>
         </div>
         <div class="form-style-3">
           <form id="totalform">
@@ -84,9 +88,15 @@
                 ><span>Group</span
                 ><select name="Q4" class="select-field">
                   <option value="flatiron">Flatiron NYC Cohort</option>
-                </select></label
-              >
+                </select>
+              </label>
+              <label
+                ><span> </span
+                ><input type="submit" class="button" value="Submit"
+              /></label>
             </fieldset>
+          </form>
+          <form id="messageForm">
             <fieldset>
               <legend>Leave us a note!</legend>
               <label for="field6"
