--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="image" id="background">
       <header>
-        <h1>Flatiron Crossword Form</h1>
+        <h1 class="mainHeader">Flatiron Form</h1>
       </header>
       <main>
         <div id="messages-container">
