--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="message">"I hate Jake, but I love this project."</div>
           </div>
         </div>
-        <div class="form-style-3">
+        <div class="form-style-3" id="formContainer">
           <form id="totalform">
             <fieldset>
               <legend>Form Questions</legend>
@@ -113,7 +113,6 @@
           </form>
         </div>
         <div id="quizContainerDiv">
-          <div id="generate-message">BUTTON</div>
           <span id="buttonContainerSpan">
             <button class="button" id="generate">Generate Quiz</button>
           </span>
